--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 </head>
 <body>
   
+  <div class="outer">
+    <div class="outer-blur"></div>
+    <div class="inner"></div>
+  </div>
+
+
   <section class="menu cid-s48OLK6784" once="menu" id="menu1-h">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
